@@ -48,6 +48,10 @@ Alien::Base = 2.26
 [Prereqs / ConfigureRequires]
 Alien::Build             = 2.26
 
+[Prereqs / TestRequires]
+Inline::C   = 0
+Inline::CPP = 0
+
 [Author::Plicease::Upload]
 cpan = 1
 
